--- a/Development.html
+++ b/Development.html
@@ -160,6 +160,180 @@
                 <br>
                 <strong>Flexibility/Adoption Likelihood:</strong> Low
                 <br>
+                <br>
+                <strong>Motivations for interacting with NS&I:</strong>
+                <br>
+                <ul>
+                    <li>Checking account balance</li>
+                    <li>Making contributions to their accounts</li>
+                    <li>Opening new accounts</li>
+                    <li>Buying premium bonds</li>
+                    <li>Checking premium bond winnings</li>
+                </ul>
+                <br>
+                <strong>How likely would they be to use the mobile app?</strong>
+                <br>
+                &#34Those ages 45 to 59 account for 19 percent of mobile bankers, relative to 27 percent of mobile phone users. Finally, individuals age 60 and over account for only 8 percent of all mobile banking users, but represent 24 percent of all mobile phone users.&#34 - US Federal Reserve Survey, 2013.
+                <br>
+                <br>
+                It seems unlikely that the older age group will be quick to adopt an NS&I mobile app as it seems they have failed to adopt other mobile banking solutions.
+                <br>
+                <br>
+                <strong>How likely would they be to purchase group owned premium bonds?</strong>
+                <br> 
+                Likely to buy in a family group or possibly with co-workers or friends. People of this age group already buy premium bonds on behalf of their children. Group owned premium bonds could be an extension of this idea.
+            </p>
+            <h3>An undergraduate student who has not heard of NS&I</h3>
+            <hr>
+            <p>
+                <strong>Age:</strong> 18-23
+                <br>
+                <strong>Location:</strong> United Kingdom
+                <br>
+                <strong>Occupation:</strong> Student
+                <br>
+                <strong>Technical Proficiency:</strong> High
+                <br>
+                <strong>Flexibility/Adoption Likelihood:</strong> Low
+                <br>
+                <br>
+                <strong>Motivations for interacting with NS&I:</strong>
+                <br>
+                <ul>
+                    <li>Create an account</li>
+                    <li>Buy / check premium bonds</li>
+                    <li>Open savings account</li>
+                    <li>Make contributions to savings account </li>
+                    <li>Check account balance</li>
+                </ul>
+                <br>
+                <strong>How likely would they be to use the mobile app?</strong>
+                <br>
+                67% of those aged 18-29 use mobile banking apps (of those with mobile phones and bank accounts). Given low interest rates and little competition between mainstream banks, customers may be more easily swayed by things like a good app. 
+                <br>
+                <br>
+                However, because they do not have much to save, their primary interaction with NS&I will be premium bonds as they offer higher potential earnings and the opportunity cost of buying them is quite low in absolute terms since they are forgoing little interest on a small amount of money. 
+                <br>
+                <br>
+                <strong>How likely would they be to purchase group owned premium bonds?</strong>
+                <br> 
+                This person would most likely have little to no money in a savings account, and very little available to save. Given virtually non existent interest in current accounts, putting small amounts of money into premium bonds would not be a risk. While returns are small, the entertainment factor of premium bonds may make them attractive. The social aspect of group ownership would create an even bigger draw by making the experience shared among friends.
+                <br>
+                <br>
+                <strong>How would they hear about NS&I?</strong>
+                <br>
+                Prior to group owned premium bonds, this person would have heard about NS&I through word of mouth, public advertising and price comparison sites. Group owned premium bonds would create scenarios whereby peers encourage each other to join their groups, introducing them to NS&I in a new and more direct way. 
+            </p>
+            <h3>An undergraduate student who has heard of NS&I</h3>
+            <hr>
+            <p>
+                <strong>Age:</strong> 18-23
+                <br>
+                <strong>Location:</strong> United Kingdom
+                <br>
+                <strong>Occupation:</strong> Student
+                <br>
+                <strong>Technical Proficiency:</strong> High
+                <br>
+                <strong>Flexibility/Adoption Likelihood:</strong> Low
+                <br>
+                <br>
+                <strong>Motivations for interacting with NS&I:</strong>
+                <br>
+                <ul>
+                    <li>Create an account</li>
+                    <li>Buy / check premium bonds</li>
+                    <li>Open savings account</li>
+                    <li>Make contributions to savings account </li>
+                    <li>Check account balance</li>
+                </ul>
+                <br>
+                <strong>How likely would they be to use the mobile app?</strong>
+                <br>
+                67% of those aged 18-29 use mobile banking apps (of those with mobile phones and bank accounts). Given low interest rates and little competition between mainstream banks, customers may be more easily swayed by things like a good app. 
+                <br>
+                <br>
+                However, because they do not have much to save, their primary interaction with NS&I will be premium bonds as they offer higher potential earnings and the opportunity cost of buying them is quite low in absolute terms since they are forgoing little interest on a small amount of money. 
+                <br>
+                <br>
+                <strong>How likely would they be to purchase group owned premium bonds?</strong>
+                <br> 
+                This person would most likely have little to no money in a savings account, and very little available to save. Given virtually non existent interest in current accounts, putting small amounts of money into premium bonds would not be a risk. While returns are small, the entertainment factor of premium bonds may make them attractive. The social aspect of group ownership would create an even bigger draw by making the experience shared among friends.
+                <br>
+                <br>
+                <strong>What role could this person play in marketing NS&I to his peers?</strong>
+                <br>
+                This person could act as an influencer if they have an account. They might spread word of the company to their peers. With group owned premium bonds, this person could have more influence by creating groups and encouraging their friends to join. Moreover, the mobile app may make the process of getting others to join more simple (i.e. rather than telling his friends to go home and log on to NS&I's website, he can tell them to download the app there and then.
+            </p>
+            <h3>A recent graduate working in London who has heard of the NS&I</h3>
+            <hr>
+            <p>
+                <strong>Age:</strong> 22-25
+                <br>
+                <strong>Location:</strong> United Kingdom
+                <br>
+                <strong>Occupation:</strong> Junior Graduate, any industry
+                <br>
+                <strong>Technical Proficiency:</strong> High
+                <br>
+                <strong>Flexibility/Adoption Likelihood:</strong> Medium
+                <br>
+                <br>
+                <strong>Motivations for interacting with NS&I:</strong>
+                <br>
+                <ul>
+                    <li>Create an account</li>
+                    <li>Open savings account</li>
+                    <li>Make contributions to savings account</li>
+                    <li>Buy / check premium bonds</li>
+                    <li>Check account balance</li>
+                </ul>
+                <br>
+                <strong>How likely would they be to use the mobile app?</strong>
+                <br>
+                As mentioned earlier, this demographic is far more engaged in mobile banking than others. Hence, if they were to have an account with NS&I, they would be very likely to use the app. Moreover, someone in this demographic who is using the app purely for premium bonds may be more likely to open a savings account with NS&I if they are given an easy and well advertised way to do so in the app.
+                <br>
+                <br>
+                <strong>How likely would they be to purchase group owned premium bonds?</strong>
+                <br> 
+                Since this group has more disposable income, they would be more likely than students to buy premium bonds. One can imagine this person pooling money together with co-workers trying to win prizes. Again the social aspect would prove attractive and make the experience of buying premium bonds more entertaining since more people are invested in the same thing.
+                <br>
+                This person could also act as an influencer, introducing his colleagues to NS&I through group owned premium bonds. His colleagues could prove to be more lucrative candidates for NS&I as they are more likely to open up savings accounts as they have more money than students.
+            </p>
+            <h3>A recent graduate working in London who has not heard of the NS&I</h3>
+            <hr>
+            <p>
+                <strong>Age:</strong> 22-25
+                <br>
+                <strong>Location:</strong> United Kingdom
+                <br>
+                <strong>Occupation:</strong> Junior Graduate, any industry
+                <br>
+                <strong>Technical Proficiency:</strong> High
+                <br>
+                <strong>Flexibility/Adoption Likelihood:</strong> Medium
+                <br>
+                <br>
+                <strong>Motivations for interacting with NS&I:</strong>
+                <br>
+                <ul>
+                    <li>Create an account</li>
+                    <li>Open savings account</li>
+                    <li>Make contributions to savings account</li>
+                    <li>Buy / check premium bonds</li>
+                    <li>Check account balance</li>
+                </ul>
+                <br>
+                <strong>How likely would they be to use the mobile app?</strong>
+                <br>
+                As mentioned earlier, this demographic is far more engaged in mobile banking than others. Hence, if they were to have an account with NS&I, they would be very likely to use the app. Moreover, someone in this demographic who is using the app purely for premium bonds may be more likely to open a savings account with NS&I if they are given an easy and well advertised way to do so in the app.
+                <br>
+                <br>
+                <strong>How likely would they be to purchase group owned premium bonds?</strong>
+                <br> 
+                Since this group has more disposable income, they would be more likely than students to buy premium bonds. One can imagine this person pooling money together with co-workers trying to win prizes. Again the social aspect would prove attractive and make the experience of buying premium bonds more entertaining since more people are invested in the same thing.
+                <br>
+                If approached by an existing NS&I customer, this person is far more likely to join in group ownership since they have more disposable income compared to students.
             </p>
         </div>
     </div>
