move roles to below email

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
                         that we are supposed to solve for a company allocated. Our allocated Company is ATOS that has challenged us.</p>
 
                     <h3>Artem Skulimovskiy</h3>
-                    <h5>Team Leader and Client Liason</h5>
                     <hr>
                     <div class="row">
                         <img src="img/Artem.PNG" class="img-rounded img-responsive col-sm-4" id="artem-image" alt="atos">
@@ -44,10 +43,10 @@
                         </p>
                         <br>
                         <h4 class="col-sm-8">Email: artem.skulimovskiy.15@ucl.ac.uk</h4>
+                        <h4 class="col-sm-8">Team Leader and Client Liason</h4>
                     </div>
 
                     <h3>Varun Mathur</h3>
-                    <h5>Chief Researcher and Programmer</h5>
                     <hr>
                     <div class="row">
                         <img src="img/Varun.PNG" class="img-rounded img-responsive col-sm-4" id="varun-image" alt="atos">
@@ -60,10 +59,10 @@
                         </p>
                         <br>
                         <h4 class="col-sm-8">Email: varun.mathur.15@ucl.ac.uk</h4>
+                        <h4 class="col-sm-8">Chief Researcher and Programmer</h4>
                     </div>
 
                     <h3>Sidharth Sikka</h3>
-                    <h5>Chief Technologist and Programmer</h5>
                     <hr>
                     <div class="row">
                         <img src="img/Sidharth.png" class="img-rounded img-responsive col-sm-4" id="sidharth-image" alt="atos">
@@ -76,6 +75,7 @@
                         </p>
                         <br>
                         <h4 class="col-sm-8">Email: sidharth.sikka.15@ucl.ac.uk</h4>
+                        <h4 class="col-sm-8">Chief Technologist and Programmer</h4>
                     </div>
                 </div>
             </div>
