screenshots added to page

--- a/Solution.html
+++ b/Solution.html
@@ -100,6 +100,89 @@
             </ul>
         </div>
     </div>
+
+    <div class="panel panel-primary">
+        <div class="panel-heading extender" id="extender4">New Mobile App Screenshots</div>
+        <div class="panel-body" id="extended4">
+            <div class="row">
+                <img src="img/MobileNew/screen1.png" class ="col-sm-3 img-responsive">
+                <img src="img/MobileNew/screen2.png" class ="col-sm-3 img-responsive">
+                <img src="img/MobileNew/screen3.png" class ="col-sm-3 img-responsive">
+                <img src="img/MobileNew/screen4.png" class ="col-sm-3 img-responsive">
+            </div>
+            <br>
+            <div class="row">
+                <img src="img/MobileNew/screen5.png" class ="col-sm-3 img-responsive">
+                <img src="img/MobileNew/screen6.png" class ="col-sm-3 img-responsive">
+                <img src="img/MobileNew/screen7.png" class ="col-sm-3 img-responsive">
+                <img src="img/MobileNew/screen8.png" class ="col-sm-3 img-responsive">
+            </div>
+            <br>
+            <div class="row">
+                <img src="img/MobileNew/screen9.png" class ="col-sm-3 img-responsive">
+                <img src="img/MobileNew/screen10.png" class ="col-sm-3 img-responsive">
+                <img src="img/MobileNew/screen11.png" class ="col-sm-3 img-responsive">
+                <img src="img/MobileNew/screen12.png" class ="col-sm-3 img-responsive">
+            </div>
+            <br>
+            <div class="row">
+                <img src="img/MobileNew/screen14.png" class ="col-sm-3 img-responsive">
+                <img src="img/MobileNew/screen15.png" class ="col-sm-3 img-responsive">
+                <img src="img/MobileNew/screen16.png" class ="col-sm-3 img-responsive">
+                <img src="img/MobileNew/screen17.png" class ="col-sm-3 img-responsive">
+            </div>
+        </div>
+    </div>
+
+    <div class="panel panel-primary">
+        <div class="panel-heading extender" id="extender5">WebApp Screenshots</div>
+        <div class="panel-body" id="extended5">
+            <div class="row">
+                <img src="img/WebApp/screen1.png" class ="col-sm-6 img-responsive">
+                <img src="img/WebApp/screen2.png" class ="col-sm-6 img-responsive">
+
+            </div>
+            <br>
+            <div class="row">
+                <img src="img/WebApp/screen3.png" class ="col-sm-6 img-responsive">
+                <img src="img/WebApp/screen4.png" class ="col-sm-6 img-responsive">
+            </div>
+            <br>
+            <div class="row">
+                <img src="img/WebApp/screen5.png" class ="col-sm-6 img-responsive">
+                <img src="img/WebApp/screen6.png" class ="col-sm-6 img-responsive">
+            </div>
+            <br>
+            <div class="row">
+                <img src="img/WebApp/screen7.png" class ="col-sm-6 img-responsive">
+            </div>
+
+        </div>
+    </div>
+
+    <div class="panel panel-primary">
+        <div class="panel-heading extender" id="extender6">Old Mobile App Screenshots</div>
+        <div class="panel-body" id="extended6">
+            <div class="row">
+                <img src="img/MobileOld/screen1.png" class ="col-sm-3 img-responsive">
+                <img src="img/MobileOld/screen2.png" class ="col-sm-3 img-responsive">
+                <img src="img/MobileOld/screen3.png" class ="col-sm-3 img-responsive">
+                <img src="img/MobileOld/screen4.png" class ="col-sm-3 img-responsive">
+            </div>
+            <br>
+            <div class="row">
+                <img src="img/MobileOld/screen5.png" class ="col-sm-3 img-responsive">
+                <img src="img/MobileOld/screen6.png" class ="col-sm-3 img-responsive">
+                <img src="img/MobileOld/screen7.png" class ="col-sm-3 img-responsive">
+                <img src="img/MobileOld/screen8.png" class ="col-sm-3 img-responsive">
+            </div>
+            <br>
+            <div class="row">
+                <img src="img/MobileOld/screen9.png" class ="col-sm-3 img-responsive">
+
+            </div>
+        </div>
+    </div>
     <!-- end main text-->
 
     <!--footer starts-->
