--- a/Development.html
+++ b/Development.html
@@ -180,7 +180,7 @@
                 <br>
                 <br>
                 <strong>How likely would they be to purchase group owned premium bonds?</strong>
-                <br> 
+                <br>
                 Likely to buy in a family group or possibly with co-workers or friends. People of this age group already buy premium bonds on behalf of their children. Group owned premium bonds could be an extension of this idea.
             </p>
             <h3>An undergraduate student who has not heard of NS&I</h3>
@@ -209,20 +209,20 @@
                 <br>
                 <strong>How likely would they be to use the mobile app?</strong>
                 <br>
-                67% of those aged 18-29 use mobile banking apps (of those with mobile phones and bank accounts). Given low interest rates and little competition between mainstream banks, customers may be more easily swayed by things like a good app. 
+                67% of those aged 18-29 use mobile banking apps (of those with mobile phones and bank accounts). Given low interest rates and little competition between mainstream banks, customers may be more easily swayed by things like a good app.
                 <br>
                 <br>
-                However, because they do not have much to save, their primary interaction with NS&I will be premium bonds as they offer higher potential earnings and the opportunity cost of buying them is quite low in absolute terms since they are forgoing little interest on a small amount of money. 
+                However, because they do not have much to save, their primary interaction with NS&I will be premium bonds as they offer higher potential earnings and the opportunity cost of buying them is quite low in absolute terms since they are forgoing little interest on a small amount of money.
                 <br>
                 <br>
                 <strong>How likely would they be to purchase group owned premium bonds?</strong>
-                <br> 
+                <br>
                 This person would most likely have little to no money in a savings account, and very little available to save. Given virtually non existent interest in current accounts, putting small amounts of money into premium bonds would not be a risk. While returns are small, the entertainment factor of premium bonds may make them attractive. The social aspect of group ownership would create an even bigger draw by making the experience shared among friends.
                 <br>
                 <br>
                 <strong>How would they hear about NS&I?</strong>
                 <br>
-                Prior to group owned premium bonds, this person would have heard about NS&I through word of mouth, public advertising and price comparison sites. Group owned premium bonds would create scenarios whereby peers encourage each other to join their groups, introducing them to NS&I in a new and more direct way. 
+                Prior to group owned premium bonds, this person would have heard about NS&I through word of mouth, public advertising and price comparison sites. Group owned premium bonds would create scenarios whereby peers encourage each other to join their groups, introducing them to NS&I in a new and more direct way.
             </p>
             <h3>An undergraduate student who has heard of NS&I</h3>
             <hr>
@@ -250,14 +250,14 @@
                 <br>
                 <strong>How likely would they be to use the mobile app?</strong>
                 <br>
-                67% of those aged 18-29 use mobile banking apps (of those with mobile phones and bank accounts). Given low interest rates and little competition between mainstream banks, customers may be more easily swayed by things like a good app. 
+                67% of those aged 18-29 use mobile banking apps (of those with mobile phones and bank accounts). Given low interest rates and little competition between mainstream banks, customers may be more easily swayed by things like a good app.
                 <br>
                 <br>
-                However, because they do not have much to save, their primary interaction with NS&I will be premium bonds as they offer higher potential earnings and the opportunity cost of buying them is quite low in absolute terms since they are forgoing little interest on a small amount of money. 
+                However, because they do not have much to save, their primary interaction with NS&I will be premium bonds as they offer higher potential earnings and the opportunity cost of buying them is quite low in absolute terms since they are forgoing little interest on a small amount of money.
                 <br>
                 <br>
                 <strong>How likely would they be to purchase group owned premium bonds?</strong>
-                <br> 
+                <br>
                 This person would most likely have little to no money in a savings account, and very little available to save. Given virtually non existent interest in current accounts, putting small amounts of money into premium bonds would not be a risk. While returns are small, the entertainment factor of premium bonds may make them attractive. The social aspect of group ownership would create an even bigger draw by making the experience shared among friends.
                 <br>
                 <br>
@@ -295,7 +295,7 @@
                 <br>
                 <br>
                 <strong>How likely would they be to purchase group owned premium bonds?</strong>
-                <br> 
+                <br>
                 Since this group has more disposable income, they would be more likely than students to buy premium bonds. One can imagine this person pooling money together with co-workers trying to win prizes. Again the social aspect would prove attractive and make the experience of buying premium bonds more entertaining since more people are invested in the same thing.
                 <br>
                 This person could also act as an influencer, introducing his colleagues to NS&I through group owned premium bonds. His colleagues could prove to be more lucrative candidates for NS&I as they are more likely to open up savings accounts as they have more money than students.
@@ -330,7 +330,7 @@
                 <br>
                 <br>
                 <strong>How likely would they be to purchase group owned premium bonds?</strong>
-                <br> 
+                <br>
                 Since this group has more disposable income, they would be more likely than students to buy premium bonds. One can imagine this person pooling money together with co-workers trying to win prizes. Again the social aspect would prove attractive and make the experience of buying premium bonds more entertaining since more people are invested in the same thing.
                 <br>
                 If approached by an existing NS&I customer, this person is far more likely to join in group ownership since they have more disposable income compared to students.
@@ -359,7 +359,7 @@
             <h3>A customer downloads the app and wishes to join a group and purchase group-owned premium bonds</h3>
             <hr>
             <p>
-                The user opens the app and is presented with a login screen. He enters his login information, and then is faced with 2 factor authentication by SMS. He enters the code he receives by text and is met with a summary of his account(s). He presses the &#34expand&#34 icon in the top left corner to reveal a navigation drawer. From here he selects the &#34Premium Bonds&#34 option. The drawer closes and he is presented with the Premium Bonds screen. He taps the &#34Groups&#34 button and is taken to the &#34Group Owned Premium Bonds&#34 screen. Here he can see what groups (if any) he is part of. At the bottom, there is an option to &#34join a group&#34. He taps this and then is prompted to enter the group code. Upon entering the correct code, a confirmation email is sent to the group admin who can then either confirm or reject his request to join. 
+                The user opens the app and is presented with a login screen. He enters his login information, and then is faced with 2 factor authentication by SMS. He enters the code he receives by text and is met with a summary of his account(s). He presses the &#34expand&#34 icon in the top left corner to reveal a navigation drawer. From here he selects the &#34Premium Bonds&#34 option. The drawer closes and he is presented with the Premium Bonds screen. He taps the &#34Groups&#34 button and is taken to the &#34Group Owned Premium Bonds&#34 screen. Here he can see what groups (if any) he is part of. At the bottom, there is an option to &#34join a group&#34. He taps this and then is prompted to enter the group code. Upon entering the correct code, a confirmation email is sent to the group admin who can then either confirm or reject his request to join.
                 <br><br>
                 Upon confirmation, the user will be able to tap on the group and see the group&#39s total winnings, total investment and his contribution. He taps the &#34Add Money&#34 button to pay more money into the group&#39s pot. He selects his nominated bank account and the money is paid in. This means that his total share in the group has increased. He then exits the app and is automatically logged out.
             </p>
@@ -644,7 +644,7 @@
                     <th>Could</th>
                 </tr>
                 <tr>
-                    <td bgcolor="#dc143c">Manage all the functionality of the website</td>
+                    <td bgcolor="#228b22">Manage all the functionality of the website</td>
                 </tr>
                 <tr>
                     <td bgcolor="#dc143c">Facebook integration to find friends for group owned premium bonds</td>
