--- a/Plans.html
+++ b/Plans.html
@@ -19,9 +19,29 @@
     <div class="panel panel-primary">
         <div class="panel-heading extender" id="extender1">Near Future</div>
         <div class="panel-body" id="extended1">
-            <p>In the near future we are looking at creating a video that would demonstrate how our app could be used,
-            to accomplish this we are going to use our app prototype in the progress. Here are some fo the most important
+            <p>In the near future if we continue with this project we would have to remove all the bugs,
+                perform more focus groups and find more ways to test our application. Here are some fo the most important
             aspects that we are looking to accomplish in the near future:
+            <ul>
+                <li>Remove Bugs</li>
+                <li>Focus groups</li>
+                <li>More Better Tests</li>
+            </ul>
+            <br>
+            If we don't continue with this project, our application is going to be worked on by National Savings and Investments.
+            To make our project a viable product they would have to connect our Applications to their backend and also make sure
+            that all transactions are performed safely and securely.
+            </p>
+
+        </div>
+    </div>
+
+    <div class="panel panel-primary">
+        <div class="panel-heading extender" id="extender2">Old Plan and Review</div>
+        <div class="panel-body" id="extended2">
+            <p><i>In the near future we are looking at creating a video that would demonstrate how our app could be used,
+                to accomplish this we are going to use our app prototype in the progress. Here are some fo the most important
+                aspects that we are looking to accomplish in the near future:
             <ul>
                 <li>Team devision</li>
                 <li>1st Sprint Week</li>
@@ -29,14 +49,8 @@
                 <li>Documentation</li>
                 <li>Development Research</li>
             </ul>
-            </p>
-        </div>
-    </div>
-
-    <div class="panel panel-primary">
-        <div class="panel-heading extender" id="extender2">Our Part</div>
-        <div class="panel-body" id="extended2">
-            <p>Our plan for the future is to start working on app development of our project. We are currently following agile development techniques and we will continue to do so throughout
+            <br>
+                Our plan for the future is to start working on app development of our project. We are currently following agile development techniques and we will continue to do so throughout
                 the project. All of our tasks will be done by the deadlines we set to ourselves in the gantt chart.
 
                 <br><br>
@@ -45,16 +59,21 @@
                 <br><br>
                 Whilst developing the app we are going to have 3 week sprint terms after each of which we are going to show out progress to the client. So far all of our
                 progress has been documented and is available for all of our team members on google drive so for the final project report we are going to constantly add any
-                information that we may be missing.</p>
+                information that we may be missing.</i></p>
+
+            <p>
+                Looking back at our previous plan, we have accomplished everything that we have set out to do and followed our plan well. Very few problems actually occurred
+                and everything was finished on time.
+
+            </p>
         </div>
     </div>
 
     <div class="panel panel-primary">
         <div class="panel-heading extender" id="extender3">End Result</div>
         <div class="panel-body" id="extended3">
-            <p>Of course it is impossible to predict the final version of our application before we even start our first sprint because of the very nature of agile development,
-            However our designs and app prototype demonstrate roughly how exactly we imagine the end product to look. Our final version would have to satisfy our MoSCoW
-            Must have requirements and at least most of the should have requirements as well.</p>
+            <p>In the end we have finnished the application before the deadline and our clients are happy with the end result. In the MoSCoW requirements
+            we have completed all the must and should requirements and we have even moved onto the could requirements.</p>
         </div>
     </div>
     <!-- end main text-->
